# MA_Agents

./: .gitignore  README.md  main.py  pyproject.toml  run_reasoning_orchestrator.sh  test_branford_analysis.py
backend/orchestrator_agent/: checkAndLoad_qdrant.py  clear_qdrant.py  main.py  orchestrator.py  prompt.py  prompts.py  pyproject.toml  requirements.txt  tools.py
backend/orchestrator_agent/tests/: test_orchestrator.py
backend/orchestrator_agent/tests/data/: intelligent-applications-spreadsheet.txt  investment-approach.txt  team.txt
backend/scraper_agent/: README.md  pyproject.toml
backend/scraper_agent/src/scraper/: scrape_urls.py  urls_to_scrape.txt
backend/summarizer/: batch1_directories.txt  batch2_directories.txt  batch3_directories.txt  directories_to_process.txt  local_summarizer.py  media_extraction_results.json  parallel_extraction.py  prompts.py  pyproject.toml  redistribute_directories.py  run_multi_directories.py  run_summarizer.py  run_teams.py  summarizer.py  test_deduplication.py  test_gemini_connection.py  test_media_extraction.py  test_portfolio_extraction.py  tests_extract_portfolio_file.py
backend/summarizer/Archive/: local_summarizer.py
backend/summarizer/Archive Output/: branfordcastle_com_summary_20250331_220109.json  branfordcastle_com_summary_20250331_220109.txt
backend/summarizer/Tests/: test_extraction2.py  test_media2.py
discover_agent/: README.md  pyproject.toml
discover_agent/src/discover_agent/: crew.py  main.py
discover_agent/src/discover_agent/config/: agents.yaml  tasks.yaml
family_office_finder/: README.md  debug_crewai.py  pyproject.toml  urls_to_scrape.txt  urls_to_scrape_2.txt
family_office_finder/output/2025-03-02/run_2/: 1_family_offices_list.json  run_metadata.json
family_office_finder/output/2025-03-03/run_10/: 1_family_offices_list.json  2_family_offices_profiles.json
family_office_finder/output/2025-03-03/run_11/: 3_family_offices_news.csv  4_combined_results.json  run_metadata.json
family_office_finder/output/20250312_121940_branfordcastle_com/: all_pages_data.json  contact-page.json  contact-page.txt  contact.json  investment-approach.json  member_ben-sebel.json  member_camille-pena.json  member_ceon-francis.json  member_cole-morrison.json  member_david-castle.json  member_david-castle.txt  member_david-pittaway.json  member_eric-korsten.json  member_james-reddington.json  member_jennifer-swinea.json  member_john-k-castle.json  member_john-k-castle.txt  member_john-s-castle.json  member_lucas-christie.json  member_marilyn-yang.json  member_richard-y-smith.json  team.json  website-terms-of-use.json
family_office_finder/output/20250312_141853_branfordcastle_com/: all_pages_data.json  investment-approach_what-makes-us-different.txt  media-coverage.json  portfolio.json
family_office_finder/output/20250312_174443_branfordcastle_com/: crawl_summary.txt  index.json  intermediary-compensation.json  investment-approach_acquisition-criteria.json  investment-approach_acquisition-criteria.txt  investment-approach_what-makes-us-different.json  portfolio.txt  what-makes-us-different.json
family_office_finder/output/20250312_174548_www_claviscp_com/: all_pages_data.json  crawl_summary.txt  index.json  index.txt  indexhtml.json  indexhtml.txt  investment-focushtml.json  investment-focushtml.txt  investor-loginhtml.json  investor-loginhtml.txt  lets-talkhtml.json  lets-talkhtml.txt  potfoliohtml.json  potfoliohtml.txt  what-we-believehtml.json  what-we-believehtml.txt  who-we-arehtml.json  who-we-arehtml.txt
family_office_finder/output/20250312_174617_www_rightlanecapital_com/: about-ushtml.json  about-ushtml.txt  all_pages_data.json  contact-ushtml.json  contact-ushtml.txt  crawl_summary.txt  current-investmentshtml.json  current-investmentshtml.txt  homehtml.json  homehtml.txt  index.json  index.txt  investment-criteriahtml.json  investment-criteriahtml.txt
family_office_finder/output/20250312_174639_www_crescendocap_com/: all_pages_data.json  crawl_summary.txt  index.json  index.txt
family_office_finder/output/20250312_174650_www_transomcap_com/: all_pages_data.json  crawl_summary.txt  index.json  index.txt
family_office_finder/output/20250312_174657_www_envestcap_com/: all_pages_data.json  crawl_summary.txt  index.json  index.txt
family_office_finder/output/20250312_174709_www_a-mcapital_com/: all_pages_data.json  ayesa-engineering-acquires-adp-consulting.json  ayesa-engineering-acquires-adp-consulting.txt  ayesa-engineering-acquires-core.json  ayesa-engineering-acquires-core.txt  crawl_summary.txt  europe.json  europe.txt  gs-foods-group-acquires-the-danielsen-company.json  gs-foods-group-acquires-the-danielsen-company.txt  index.json  index.txt  opportunities.json  opportunities.txt  partner.json  partner.txt  strategic-investments.json  strategic-investments.txt
family_office_finder/output/20250312_174757_latticeworkcapital_com/: about-latticework.json  all_pages_data.json  careers.json  crawl_summary.txt  index.json  index.txt  investment-criteria.json  news.json  news.txt  portfolio.json  portfolio.txt  team.json  what-makes-us-different.json  why-partner.json
family_office_finder/output/20250312_174833_www_redriverequity_com/: about.json  about.txt  all_pages_data.json  contact-us.json  contact-us.txt  crawl_summary.txt  index.json  index.txt  intermediaries.json  intermediaries.txt  investment-philosophy.json  investment-philosophy.txt  portfolio.json  portfolio.txt
family_office_finder/output/20250312_174857_www_pennspring_com/: all_pages_data.json  crawl_summary.txt  emily.json  emily.txt  holdings.json  holdings.txt  index.json  index.txt  investments.json  investments.txt  justin.json  justin.txt  keystoneceo.json  keystoneceo.txt  lou.json  lou.txt  pe.json  pe.txt  team.json  team.txt
family_office_finder/src/family_office_finder/: crew.py  main.py  schema.py  scrape_urls.py  urls_to_scrape.txt
family_office_finder/src/tests/: test_firecrawl.py  test_playwright.py
(+3897 files in other folders)
