[project]
name = "ma_agents"
version = "0.1.0"
description = "ma_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ma_agents = "ma_agents.main:run"
run_crew = "ma_agents.main:run"
train = "ma_agents.main:train"
replay = "ma_agents.main:replay"
test = "ma_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
