[project]
name = "discover_agent"
version = "0.1.0"
description = "discover_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crawl4ai>=0.5.0.post4",
    "crewai[tools]>=0.102.0,<1.0.0",
    "exa-py>=1.8.9",
]

[project.scripts]
discover_agent = "discover_agent.main:run"
run_crew = "discover_agent.main:run"
train = "discover_agent.main:train"
replay = "discover_agent.main:replay"
test = "discover_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
