[project]
name = "family_office_finder"
version = "0.1.0"
description = "family_office_finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crawl4ai>=0.5.0.post4",
    "crewai[tools]>=0.102.0,<1.0.0",
    "exa-py>=1.8.9",
    "firecrawl-py>=1.12.0",
    "pymongo>=4.11.2",
]

[project.scripts]
family_office_finder = "family_office_finder.main:run"
run_crew = "family_office_finder.main:run"
train = "family_office_finder.main:train"
replay = "family_office_finder.main:replay"
test = "family_office_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
