[project]
name = "scraper"
version = "0.1.0"
description = "scraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crawl4ai>=0.5.0.post4",
    "crewai[tools]>=0.102.0,<1.0.0",
    "exa-py>=1.8.9",
    "firecrawl-py>=1.12.0",
    "pymongo>=4.11.2",
]

[project.scripts]
scraper = "scraper.main:run"
run_crew = "scraper.main:run"
train = "scraper.main:train"
replay = "scraper.main:replay"
test = "scraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]
